--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>PizzaOnline</name>
     <description>PizzaOnline</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>13</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -35,6 +35,13 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.6.14</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/ma.glasnost.orika/orika-core -->
+        <dependency>
+            <groupId>ma.glasnost.orika</groupId>
+            <artifactId>orika-core</artifactId>
+            <version>1.5.4</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
