--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,10 @@
             <artifactId>orika-core</artifactId>
             <version>1.5.4</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
