--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=validate
-
+spring.jpa.show-sql=true
+server.error.include-stacktrace=never
 spring.datasource.url=jdbc:postgresql://localhost:5432/sber_taste_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
