Minor changes were added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.jpa.show-sql=true
 server.error.include-stacktrace=never
 spring.datasource.url=jdbc:postgresql://localhost:5432/sber_taste_db
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=postres
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+jwt.secret=some-very-secret-and-really-long-combination
+jwt.expirationPeriodInMinutes=60
