--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,10 @@ server.error.include-stacktrace=never
 spring.datasource.url=jdbc:postgresql://localhost:5432/sber_taste_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+
 jwt.secret=some-very-secret-and-really-long-combination
 jwt.expirationPeriodInMinutes=60
+
+images.location=\\images\\
